--- a/sample.yaml
+++ b/sample.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: spring-helloworld
-        image: achyuth007/simple-spring:latest
+        image: harsha2018/tomcat1:latest
         imagePullPolicy: Always
         ports:
         - containerPort: 80
